# Android

./: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
wallet/: .gitignore  CMakeLists.txt  README.md  build.gradle
wallet/src/main/: AndroidManifest.xml
wallet/src/main/java/chain/: BlockchainManager.java
wallet/src/main/java/global/: AddressLabel.java  ContextWrapper.java  PivtrumGlobalData.java  PivxModuleImp.java  PivxRate.java  UloModule.java  WalletConfiguration.java
wallet/src/main/java/global/store/: AbstractDbDao.java  ContactsStoreDao.java
wallet/src/main/java/global/utils/: FileUtils.java  GsonUtils.java  Io.java  LogHelper.java  StringUtils.java
wallet/src/main/java/global/wrappers/: TransactionWrapper.java
wallet/src/main/java/pivtrum/: NetworkConf.java  PivtrumPeer.java  PivtrumPeergroup.java  UloNodeData.java
wallet/src/main/java/pivtrum/listeners/: AddressListener.java  PeerDataListener.java
wallet/src/main/java/pivtrum/messages/responses/: StatusHistory.java
wallet/src/main/java/wallet/: Coin.java  MonetaryFormat.java  Wallet.java  WalletManager.java  WalletUtils.java
wallet/src/main/java/wallet/exceptions/: InsufficientInputsException.java
wallet/src/main/java/wallet/rate/db/: AbstractSqliteDb.java  NodeDb.java  RateDb.java
wallet/src/main/java/wallet/transaction/: ErrorBean.java  Recieve.java  Spend.java  Transaction.java
wallet/src/main/jni/: libwallet.h  walletjni.cpp
wallet/src/test/org/pivtrum/imp/: WalletConfigurationsImp.java
(+172 files in other folders)
